ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: / 
            pathType: Prefix 
            backend:
              service:
                name: nginx
                port:
                  number: 8080
